<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/menu_right_top_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="8dp"
			android:background="@color/colorLightGray">
			<Button
				android:id="@+id/menu_btn_dashboard"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_my_dashboard"
				android:text="@string/menu_my_dashboard"/>
			<Button
				android:id="@+id/menu_btn_inbox"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_my_inbox_empty"
				android:text="@string/menu_my_inbox_"/>
			<Button
				android:id="@+id/menu_btn_course"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_my_courses"
				android:text="@string/menu_my_courses"/>
			<Button
				android:id="@+id/menu_btn_discussion"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_my_discussion"
				android:text="@string/menu_my_discussion"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/menu_right_bottom_container"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@id/menu_right_top_container">
			<Button
				android:id="@+id/menu_btn_home"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_home"
				android:text="@string/menu_my_home"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/menu_btn_course_cat"
					style="@style/MLMenuButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
					android:drawableStart="@drawable/ic_course_categories"
					android:text="@string/menu_my_course_categories"/>
				<ImageView
                    android:id="@+id/course_cat_arrow_image"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
			</LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_main_categories_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/menu_btn_knowledge"
                style="@style/MLMenuButton"
                android:drawableStart="@drawable/ic_knowledge_forum"
                android:text="@string/menu_my_knowledge_forum"/>
			<Button
				android:id="@+id/menu_btn_support"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_help_support"
				android:text="@string/menu_my_support"/>
			<Button
				android:id="@+id/menu_btn_signout"
				style="@style/MLMenuButton"
				android:drawableStart="@drawable/ic_sign_out"
				android:text="@string/menu_my_sign_out"/>
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
	
</androidx.core.widget.NestedScrollView>