<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp">
    <LinearLayout
        android:id="@+id/item_comment_forum_header_rep_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorSemiLightGray"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="REPLIES"
                  android:textSize="15sp"
                  android:layout_gravity="center_vertical"
                  android:layout_weight="0.85"/>
        <ImageButton
            android:id="@+id/item_comment_forum_sort_btn"
            android:src="@drawable/ic_sort_black"
            android:layout_width="0dp"
            android:layout_weight="0.13"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@drawable/border_gray_bg_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_comment_forum_avatar"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/ic_mylearning_mm"
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.85"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_comment_forum_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="JOHN DOE"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/item_comment_forum_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Saturday , 5 July 2018 18:20"/>
            </LinearLayout>
            
        </LinearLayout>
        <TextView
            android:id="@+id/item_comment_forum_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13.5sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:text="Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales  nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam  odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at  ultricies metus viverra. Pellentesque arcu mauris, malesuada quis  ornare accumsan, blandit sed diam.

Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis  sodales  nec vulputate justo hendrerit. Vivamus varius pretium ligula, a  aliquam  odio euismod sit amet. Quisque laoreet sem sit amet orci  ullamcorper at  ultricies metus viverra. Pellentesque arcu mauris,  malesuada quis  ornare accumsan, blandit sed diam."/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:id="@+id/item_dfh_frm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="0.1"
                          android:orientation="horizontal">
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
                             android:paddingTop="4dp"
                             android:paddingBottom="4dp"
                             android:layout_weight="1"
                >
                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/item_comment_edit"
                            android:textSize="12sp"
                            android:text="@string/action_edit"/>
                </FrameLayout>

                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
                             android:paddingTop="4dp"
                             android:paddingBottom="4dp"
                             android:layout_weight="1"

                >
                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/item_comment_delete"
                            android:textSize="12sp"
                            android:text="@string/action_delete"/>
                </FrameLayout>

                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
                             android:paddingTop="4dp"
                             android:paddingBottom="4dp"
                             android:layout_weight="1"
                             android:id="@+id/fl_report"

                >

                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/item_comment_report"
                            android:textSize="12sp"
                            android:text="@string/action_report"/>
                </FrameLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:paddingStart="8dp"
                             android:paddingEnd="8dp"
                             android:paddingTop="4dp"
                             android:paddingBottom="4dp"
                             android:layout_weight="1"
                             android:id="@+id/fl_like"

                >

                    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/item_comment_like"
                            android:textSize="12sp"
                            android:text="Like"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>