<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/item_dfh_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="2dp"
        android:weightSum="7">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_dfh_profile_pic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginTop="2dp"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.8"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_dfh_createdBy"
                android:layout_width="match_parent"
                android:textSize="12.5sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_dfh_createdAt"
                android:textSize="12.5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/item_dfh_button_like"
            android:background="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_thumb_up_white"
            android:layout_marginStart="4dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/item_dfh_button_subscribe"
            android:background="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_people_add_white"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            />
        <!--<ImageButton-->
                <!--android:id="@+id/item_dfh_button_report"-->
                <!--android:background="@android:color/darker_gray"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="36dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:src="@drawable/ic_warning_white"-->
                <!--android:layout_marginStart="4dp"-->
                <!--android:layout_weight="1"-->
        <!--/>-->
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorSemiLightGray"/>
    <TextView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/item_dfh_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>
    <TextView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/item_dfh_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>
    <TextView
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:id="@+id/item_dfh_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:id="@+id/item_dfh_frm1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_weight="0.1"
                      android:orientation="horizontal">
            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingTop="4dp"
                         android:paddingBottom="4dp"
                         android:layout_weight="1">
                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:id="@+id/item_dfh_edit"
                        android:textSize="12sp"
                        android:text="@string/action_edit"/>
            </FrameLayout>
            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingTop="4dp"
                         android:paddingBottom="4dp"
                         android:layout_weight="1">
                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:id="@+id/item_dfh_delete"
                        android:textSize="12sp"
                        android:text="@string/action_delete"/>
            </FrameLayout>
            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp"
                         android:paddingTop="4dp"
                         android:paddingBottom="4dp"
                         android:layout_weight="1"

            >

                <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:id="@+id/item_dfh_button_report"
                        android:textSize="12sp"
                        android:text="@string/action_report"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="vertical">
        <WebView
            android:id="@+id/item_dfh_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>
    </LinearLayout>-->
    <LinearLayout
            android:id="@+id/item_knowledge_forum_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_white_bg"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">
            <ImageView
                    android:src="@drawable/ic_thumb_up_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="14dp"
                    android:adjustViewBounds="true"/>
            <TextView
                    android:id="@+id/item_kf_liked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="0"/>
            <ImageView
                    android:src="@drawable/ic_people_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="18dp"
                    android:adjustViewBounds="true"/>
            <TextView
                    android:id="@+id/item_kf_subs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:text="0"/>
            <ImageView
                    android:src="@drawable/ic_reply_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="18dp"
                    android:adjustViewBounds="true"/>
            <TextView
                    android:id="@+id/item_kf_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center_vertical"
                    android:text="0"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorSemiLightGray"/>
    </LinearLayout>
</LinearLayout>